<?xml version="1.0"?>
<package>
  <name>autocontroller</name>
  <version>0.0.1</version>
  <description> Package for controlling auto for Universidad de Chile</description>
  <maintainer email="matihaeussler@gmail.com">Mati</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  
  </export>
</package>
